force-app/main/default/objects/TravelOffering__c/TravelOffering__c.object-meta.xml
<CustomObject>
    <label>Travel Offering</label>
    <nameField>
        <displayFormat>TO-{0000}</displayFormat>
        <label>Travel Offering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>