force-app/main/default/objects/TravelOffering__c/fields/Actual_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_DateTime__c</fullName>
    <label>Actual Start DateTime</label>
    <type>DateTime</type>
</CustomField>