force-app/main/default/objects/TravelOffering__c/fields/Delay_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Delay_Duration_Minutes__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Actual_Start_DateTime__c)) &amp;&amp;  
    Actual_Start_DateTime__c &gt; StartDateTime__c,
    (Actual_Start_DateTime__c - StartDateTime__c) * 24 * 60,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay Duration Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>