force-app/main/default/objects/TravelOffering__c/fields/TransportationType__c.field-meta.xml
<CustomField>
    <fullName>TransportationType__c</fullName>
    <label>Transportation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Flight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>