force-app/main/default/objects/TravelOffering__c/listViews/Support_Queue_TravelOffering.listView-meta.xml
<ListView>
    <fullName>Support_Queue_TravelOffering</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Queue</label>
    <queue>Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>